Actually fix the images this time

--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,3 +1,1 @@
-{{ with .Get "src" }}
-<img src="{{ . | relURL }}" alt="{{ $.Get "alt" | default "" }}" />
-{{ end }}
+<img src="{{ .Get "src" }}" alt="{{ .Get "alt" | default "" }}" />
